# waste_incineration

./: .gitignore  README.md  pyproject.toml  run_preprocess.py  run_train.py  run_train_ml.py
configs/: post_rules.json  preprocess.json  train.json
scripts/: eval_with_rules.py  ml_feature_importance.py  ml_feature_importance_rule.py  plot_confusion_matrix.py  plot_ml_confusion_matrix.py
src/mtsc_postprocess/: __init__.py  config.py  features.py  rules.py
src/mtsc_preprocess/: cleaning.py  cli.py  config.py  features.py  io.py  labels.py  output.py  pipeline.py  quality.py  split.py  temporal_features.py  windowing.py
src/mtsc_train/: __main__.py  cli.py  config.py  data.py  losses.py  metrics.py  registry.py  trainer.py
src/mtsc_train/ml/: __init__.py  trainer.py
src/mtsc_train/models/: __init__.py  base.py  gru.py  lstm.py
